styles/style.css
body {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "MedievalSharp";
    background-image: url("../images/body-bg.jpg");
    background-repeat: repeat;
    background-position-x: 110%;
    background-position-y: 150%;

}


#game-intro {
    
    border-radius: 0.5%;
    background-image: url("../images/intro.jpg");
    background-repeat: no-repeat;
    background-position: cover;
    background-size: 100%;
    box-shadow: 
    0px -25px 20px -20px rgba(0,0,0,0.45),
    25px 0px 20px -20px rgba(0,0,0,0.45),
    0px 25px 20px -20px rgba(0,0,0,0.45),
    -25px 0px 20px -20px rgba(0,0,0,0.45);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 800px;
    height: 500px;
    margin: 50px auto
}

#start-button {
    font-size: 1.4em ;
    font-family: "Pirata One";
    font-weight: 400;
    width: 200px;
    height: 60px;
    background: linear-gradient(#FF003F, #8B0000);   
    transition: all 0.3s ease-in-out;
    animation: grow-font 5s infinite;
}


#game-container {
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#stats-container {
    border: 1px solid black;
    border-radius: 30%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 400px;
    margin: auto;
    background-color: wheat;
}

#stats-in-game {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    width: 1000px;
    height: 50px;
    background-color: wheat;
    margin-top: 50px;
}

#game-screen {
    display: none;
    position: relative;
    background-image: url("../images/background1.jpg");
    background-position: center;
    background-position-y: 100%;
    border: 1px solid black
}


#game-end {
    display: none;
}

@keyframes grow-font {
    40% {
        font-size: 20px
    }
}

